# threadnet

./: .gitignore  README.md  datacollection.md
app/: README.md  data.ts  package-lock.json  package.json
app/actions/: changeTransport.tsx
app/app/: layout.tsx  page.tsx
app/components/: auto-reload.tsx  network-graph.tsx  node-details-card.tsx  settings-menubar.tsx
app/lib/: scrapeAgents.ts  useDimensions.tsx
border-router/: README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
border-router/components/network_state/: CMakeLists.txt
border-router/components/network_state/include/: foreign_status.h  multicast_status.h  network_state.h  tcp_status.h  udp_status.h
border-router/components/network_state/src/: app_state.c  foreign_status.c  multicast_status.c  network_state.c  node_state.c  tcp_status.c  udp_status.c
border-router/components/test_runner/: CMakeLists.txt
border-router/components/thread_init/: CMakeLists.txt  idf_component.yml
border-router/components/threadnet_app/: CMakeLists.txt  idf_component.yml  threadnet_app.c  threadnet_app.h
border-router/main/: CMakeLists.txt  idf_component.yml  main.c
common/: README.md
end-device/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
end-device/components/test_runner/: CMakeLists.txt  idf_component.yml
end-device/components/test_runner/include/: multi_test.h  tcp_test.h  test_start_receiver.h  udp_test.h
end-device/components/test_runner/src/: multi_test.c  tcp_test.c  test_runner.c  test_start_receiver.c  udp_test.c
end-device/main/: idf_component.yml  main.c
(+32 files in other folders)
